--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,12 +5,59 @@ $icon-font-path: '../fonts/';
 // endbower
 
 $blue: #003F91;
-$white: #FFFCF7;
+$white: #FFFFFF;
 $grey: #3B3D3D;
+$lgrey: #cdcdcd;
+
+$font-h: 'Oswald';
+$font-sans: 'Droid Sans';
+
+.bg {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width:100%;
+    height:100%;
+    opacity: 0.5;
+    background-image: url('../images/drobne.jpg');
+    background-position: bottom right;
+    background-repeat: no-repeat;
+    z-index: 1;
+}
+
+.container {
+    position: relative;
+    z-index: 10;
+}
+
+h1, h2, h3 {
+    font-family: $font-h;
+    letter-spacing: 1px;
+    color: $blue;
+
+    small {
+        font-weight: lighter;
+        margin: 1em;
+    }
+}
 
 body {
-    color: $white;
-    background-color: $blue;
+    position: relative;
+    font-family: 'Droid Sans', sans-serif;
+    color: $grey;
+}
+
+footer {
+    margin: 50px 0;
+    height: 120px;
+    padding: 20px;
+    text-align: right;
+}
+
+.marketing {
+    margin: 10px 0;
+    padding: 0.5em;
+    font-size: 22px;
 }
 
 form[name=transferForm] {
@@ -20,7 +67,7 @@ form[name=transferForm] {
         color: $grey;
         background-color: $white;
         border-radius: 3px;
-        border: 1px solid $grey;
+        border: 1px solid $lgrey;
     }
 
     button {
@@ -34,15 +81,35 @@ form[name=transferForm] {
     input[type=number] {
         padding: 0.5em;
         display: block;
-        margin: 1em;
+        margin: 1em 0;
         font-size: 20px;
         width: 100%;
     }
 
 }
 
-#code {
+.newCodeButton {
+    color: $grey;
+    background-color: $white;
+    border-radius: 3px;
+    border: 1px solid $lgrey;
+    display: none;
+    padding: 0.5em;
+    margin: 1em auto;
+    font-size: 20px;
+}
+
+.codewrap {
+    display: none;
+    width: 540px;
     margin: auto;
-    width: 500px;
-    height: 500px;
+    padding: 20px;
+    background-color: white;
+    border: 1px solid $lgrey;
+
+    #code {
+        margin: auto;
+        width: 500px;
+        height: 500px;
+    }
 }
